# translate-demo

./: CMakeLists.txt  COPYING  README.rst  translate.cpp  translate_algo.cpp  translate_algo_reuse.cpp  translate_interfaces.cpp
include/translate/: translate.hpp  translator.hpp  translator_interfaces.hpp  translator_split.hpp  uppercaser.hpp
